# elf

./: .gitignore  AGENTS.md  Cargo.toml  DOC_MCP_OVERHAUL.md  EGUI_NOTES.md  INSTALLER_NOTES.md  MCP.md  NEW_ROADMAP_IDEAS.md  README.md  README.txt  ROADMAP.md  STIMULUS_PRESENTER.md
.github/workflows/: ci.yml  release-package.yml
crates/elf-cli/: Cargo.toml
crates/elf-cli/src/: main.rs  run.rs
crates/elf-cli/tests/: hrv_nonlinear.rs  hrv_psd.rs  pipeline.rs  pupil.rs  run_simulate.rs
crates/elf-gui/: Cargo.toml  build.rs
crates/elf-gui/src/: hrv_helpers.rs  main.rs  router.rs  run_loader.rs  store.rs
crates/elf-keys/: Cargo.toml
crates/elf-keys/src/: lib.rs
crates/elf-lib/: Cargo.toml
crates/elf-lib/src/: lib.rs  signal.rs
crates/elf-lib/src/detectors/: ecg.rs  mod.rs
crates/elf-lib/src/io/: bitalino.rs  csv.rs  eeg.rs  eye.rs  mod.rs  openbci.rs  text.rs  wfdb.rs
crates/elf-lib/src/metrics/: hrv.rs  mod.rs  sqi.rs
crates/elf-lib/src/plot/: mod.rs
crates/elf-mcp/: Cargo.toml
crates/elf-mcp/src/: catalog.rs  doc_types.rs  docs.rs  main.rs  resources.rs  tools.rs  transport.rs
crates/elf-run/: Cargo.toml
crates/elf-run/src/: lib.rs
crates/elf-tui/: Cargo.toml
crates/elf-tui/src/: main.rs
history/: CAKU_NOTES.md  DATASET_COVERAGE.md  INSTALLER_CI.md  LIVE_HRV_UI.md  PRESENTER_BUNDLES.md
scripts/: generate_run_bundle.sh  install.sh  package.sh  uninstall.sh
test_data/: EEG_formats_plan.md  Eye_formats_plan.md  HRV_formats_plan.md  README.md  bids_sample.tsv  bitalino_sample.csv  dataset_spec_rr.json  dataset_suite_core.json  eye_sample.csv  openbci_sample.csv  pupil_labs_sample.csv  rr_dataset_b.txt  rr_dataset_b_expected.json  run_design.toml  run_physionet_experiment.sh  run_trials.csv  sqi_sample.txt  synthetic_recording_a.txt  synthetic_recording_a_expected.json  tiny_rr.txt  tobii_sample.tsv
test_data/run_bundle/: events.idx  events.json  events.tsv  run.json
