[package]
name = "elf-keys"
version = "0.1.0"
edition = "2021"
authors = ["ELF Contributors"]
license = "MIT OR Apache-2.0"
description = "CLI helpers for certificate/key pair management"

[dependencies]
anyhow = { workspace = true }
dirs-next = "2"
rcgen = "0.9"
serde = { workspace = true, features = ["derive"] }
chrono = "0.4"
