[package]
name = "elf-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
realfft = { workspace = true }
polars = { workspace = true, optional = true }

[features]
default = []
polars = ["dep:polars"]
