[package]
name = "elf-lib"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
realfft = { workspace = true }
polars = { workspace = true, optional = true }
csv = { workspace = true }
edf-reader = { workspace = true }
wfdb-rust = "0.3"

[features]
default = []
polars = ["dep:polars"]
