[package]
name = "elf-run"
version = "0.1.0"
edition = "2021"
authors = ["ELF Contributors"]
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
