[package]
name = "elf-tui"
version = "0.1.0"
edition = "2021"
authors = ["ELF Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
crossterm = "0.27"
ratatui = "0.26"
elf-lib = { path = "../elf-lib" }
elf-run = { path = "../elf-run" }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
